# rust-cli-starter

./: .gitignore  Cargo.toml  README.md
.meta/: README.md
.meta/templates/: command.rs
config/: config.toml  config.yml
src/: commands.rs  main.rs  settings.rs
src/commands/: example.rs  scaffold.rs  server.rs
