[package]
name = "rust-cli-starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Recommended dependencies
# general 
config = { git = "https://github.com/mehcode/config-rs", branch = "master" }
# serde = { git = "https://github.com/serde-rs/serde", branch = "master" }
# tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
# reqwest = { git = "https://github.com/seanmonstar/reqwest", branch = "master" }
# once_cell = { git = "https://github.com/matklad/once_cell", branch = "master" }

# error handling
# anyhow = { git = "https://github.com/dtolnay/anyhow", branch = "master" }
# thiserror = { git = "https://github.com/dtolnay/thiserror", branch = "master" }
# fs_err = { git = "https://github.com/andrewhickman/fs-err", branch = "master", package = "fs-err" }

# diagnostics and testing
# tracing = { git = "https://github.com/tokio-rs/tracing", branch = "master" }
# insta = { git = "https://github.com/mitsuhiko/insta", branch = "master" }
# fake = { git = "https://github.com/cksac/fake-rs", branch = "master" }
# wiremock = { git = "https://github.com/LukeMathWalker/wiremock-rs", branch = "main" }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
branch = "master"
features = ["derive"]
