# Adds recommended packages below
[package]
name = "rust-cli-starter"
version = "0.1.0"
description = "A starter for a CLI app using Clap's derive features."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
axum-macros = "0.4.1"
color-eyre = "0.6.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
branch = "master"
features = ["derive", "cargo"]

# Recommended dependencies. These are recommendations, and can be added with the
# `cargo add` command.
# 
# -----------------------------------------------------[general recommendations]
# serde 
# git: https://github.com/serde-rs/serde
# command: cargo add serde
# desc: Serialization library for Rust
# 
# tokio = { , branch = "master" }
# git: https://github.com/tokio-rs/tokio
# command: cargo add tokio -F full
# desc: Asynchronous I/O for Rust
# 
# reqwest = { , branch = "master" }
# git: https://github.com/seanmonstar/reqwest
# command: cargo add reqwest -F json
# desc: Asynchronous HTTP client for Rust
# 
# once_cell 
# git: https://github.com/matklad/once_cell
# command: cargo add once_cell 
# desc: A simple, fast, thread-safe, zero-allocation, lazy static cell
# 
# ----------------------------------------------[error handling recommendations]
# anyhow 
# git: https://github.com/dtolnay/anyhow
# command: cargo add anyhow 
# desc: A lightweight, fast, and ergonomic error type for Rust
# 
# thiserror 
# git: https://github.com/dtolnay/thiserror
# command: cargo add thiserror
# desc: A lightweight, fast, and ergonomic error type for Rust
#
# -------------------------------------[diagnostics and testing recommendations]
# tracing 
# git: https://github.com/tokio-rs/tracing
# command: cargo add tracing
# desc: Application level tracing for Rust
# 
# tracing-subscriber
# git: https://github.com/tokio-rs/tracing
# command: cargo add tracing-subscriber
# desc: Utilities for implementing tracing subscribers
#
# insta 
# git: https://github.com/mitsuhiko/insta
# command: cargo add insta
# desc: A snapshot testing library for Rust
# 
# fake 
# git: https://github.com/cksac/fake-rs
# command: cargo add fake
# desc: A library for generating fake data
# 
# wiremock 
# git: https://github.com/LukeMathWalker/wiremock-rs
# command: cargo add wiremock
# desc: A library for mocking HTTP requests and responses
